update package.json to correct page

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wildfire-tracker-react-nasa-ol",
-  "homepage": "https://github.com/eblissss/fire-tracker",
+  "homepage": "https://eblissss.github.io/fire-tracker/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
