--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wildfire-tracker-react-nasa-ol",
+  "name": "fire-tracker",
   "homepage": "https://eblissss.github.io/fire-tracker/",
   "version": "0.1.0",
   "private": true,
